# oc-calibration-app

./: .gitignore  README.md  pyproject.toml
examples/: nitrate.csv  nitrate.ods
oc_calibration_app/: app.py  data_fitting.py
